wip: implement login & logout functionalities
